--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Coleman",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongodb": "^6.2.0"
   }
 }
